src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-269.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units lrud\")"
---
INVALID:
  items:
    - INVALID:
        loc: "#units lrud"
        locs:
          directive: "#units"
        options:
          - INVALID:
              loc: lrud
              locs:
                option: lrud
              option: Lrud
            issues:
              - 0
        type: UnitsDirective
issues:
  - code: EMISSINGVALUE
    loc: ""
    message: Missing =
    severity: Error
