src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-27.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units feet\")"
---
items:
  - loc: "#units feet"
    locs:
      directive: "#units"
    options:
      - loc: feet
        option: DistanceUnit
        unit: Feet
    type: UnitsDirective
