src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-273.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units Lrud=t\")"
---
items:
  - loc: "#units Lrud=t"
    locs:
      directive: "#units"
    options:
      - loc: Lrud=t
        locs:
          option: Lrud
          style: t
        option: Lrud
        style: ToStationPerpendicular
    type: UnitsDirective
