src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-274.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units lrud=T\")"
---
items:
  - loc: "#units lrud=T"
    locs:
      directive: "#units"
    options:
      - loc: lrud=T
        locs:
          option: lrud
          style: T
        option: Lrud
        style: ToStationPerpendicular
    type: UnitsDirective
