src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-275.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units Lrud=fb\")"
---
items:
  - loc: "#units Lrud=fb"
    locs:
      directive: "#units"
    options:
      - loc: Lrud=fb
        locs:
          option: Lrud
          style: fb
        option: Lrud
        style: FromStationBisector
    type: UnitsDirective
