src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-276.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units lrud=FB\")"
---
items:
  - loc: "#units lrud=FB"
    locs:
      directive: "#units"
    options:
      - loc: lrud=FB
        locs:
          option: lrud
          style: FB
        option: Lrud
        style: FromStationBisector
    type: UnitsDirective
