src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-277.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units Lrud=tb\")"
---
items:
  - loc: "#units Lrud=tb"
    locs:
      directive: "#units"
    options:
      - loc: Lrud=tb
        locs:
          option: Lrud
          style: tb
        option: Lrud
        style: ToStationBisector
    type: UnitsDirective
