src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-278.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units lrud=TB\")"
---
items:
  - loc: "#units lrud=TB"
    locs:
      directive: "#units"
    options:
      - loc: lrud=TB
        locs:
          option: lrud
          style: TB
        option: Lrud
        style: ToStationBisector
    type: UnitsDirective
